Rework setup.py, pytest, and tox so that test dependencies are not installed during a normal setup.py install

--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,10 @@ envlist = py27,py35
 indexserver = pypi = https://pypi.python.org/simple
 
 [testenv]
-commands = coverage run --source fbp -m py.test -v
-          coverage report
+commands = py.test {posargs} -v --cov={envsitepackagesdir}/rill --cov-report=term
 setenv = PYTHONDONTWRITEBYTECODE=1
-deps = -r{toxinidir}/requirements.txt
+deps = -r{toxinidir}/tests/requirements.txt
 
 [pytest]
 addopts = tests
+norecursedirs = .tox
