Adjust requirements and test runner settings

--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,5 @@ setenv = PYTHONDONTWRITEBYTECODE=1
 deps = -r{toxinidir}/tests/requirements.txt
 
 [pytest]
-addopts = tests
+addopts = tests -v --timeout 1
 norecursedirs = .tox
