--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: python
+python:
+  - "2.7"
+  - "3.5"
 # command to install tox, tox env will install deps.
 install: pip install tox
 # command to run tests
@@ -6,4 +9,3 @@ script: tox
 
 after_success:
     coveralls
-
