--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "2.7"
   - "3.5"
 # command to install tox, tox env will install deps.
-install: pip install tox
+install: pip install tox-travis
 # command to run tests
 script: tox
 
