--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,10 @@ envlist = py27,py35
 indexserver = pypi = https://pypi.python.org/simple
 
 [testenv]
-commands = py.test {posargs} -v --cov={envsitepackagesdir}/rill --cov-report=term
+commands = py.test tests {posargs} -v --cov={envsitepackagesdir}/rill --cov-report=term
 setenv = PYTHONDONTWRITEBYTECODE=1
 deps = -r{toxinidir}/tests/requirements.txt
 
 [pytest]
-addopts = tests -v --timeout 1
+addopts = -v --timeout 2
 norecursedirs = .tox
