Add typing module for static typing.  Improve docs.

--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,5 @@ setenv = PYTHONDONTWRITEBYTECODE=1
 deps = -r{toxinidir}/tests/requirements.txt
 
 [pytest]
-addopts = -v --timeout 2
+addopts = -v
 norecursedirs = .tox
